# gitea.py

./: README.md  pyproject.toml  testboi.py
giteapy/: admin.py  exceptions.py  gitea.py  issue.py  miscellaneous.py  models.py  notification.py  organization.py  package.py  user.py
tests/: .env.example  test_admin.py  test_gitea.py  test_user.py
