[tool.poetry]
name = "gitea.py"
version = "0.1.0"
description = "An API wrapper for Gitea written in Python"
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://git.lovinator.space/TheLovinator/gitea.py"
repository = "https://git.lovinator.space/TheLovinator/gitea.py"
documentation = "https://git.lovinator.space/TheLovinator/gitea.py"
keywords = ["gitea", "wrapper", "python"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
